# Termfolio

./: Cargo.toml  index.html  rust-toolchain.toml
configs/: config.json
src/: app.rs  lib.rs  main.rs
src/app/: banner.rs  commands.rs  history.rs  prompt.rs
src/app/commands/: fetch.rs  texts.rs
src/app/commands/fetch/: formats.rs
src/app/prompt/: general.rs  keyboard.rs  themes.rs
styles/: styles.css
